app/k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: flask
  name: flask
spec:
  replicas: 1
  selector:
    matchLabels:
      run: flask
  template:
    metadata:
      labels:
        run: flask
    spec:
      containers:
      - image: eu.gcr.io/practica-vms/keepcoding/flask-kubernetes:latest
        name: flask
        livenessProbe:
          httpGet:
            path: /health/live
            port: 5000
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 5000
        resources:
          requests:
            memory: 128Mi
            cpu: 100m
          limits:
            memory: 256Mi
            cpu: 200m            

      # 9. Asegurar que los PODs de la base de datos y la aplicación permanecen lo más juntos posible
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:  
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - redis
              topologyKey: "kubernetes.io/hostname"
        podAntiAffinity:
            preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:  
                labelSelector:
                    matchExpressions:
                    - key: run
                      operator: In
                      values:
                      - flask
                topologyKey: "kubernetes.io/hostname"
