app/k8s/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: flask
spec:
  rules:
  - host: practica.34.78.37.87.nip.io
    http:
      paths:
      - backend:
          serviceName: flask
          servicePort: 5000
